0.7.4
Added newfile to remote control.
Done insertfile to in remote control.
Done selectbetween to in remote control.
Done move to tab:line:col in remote control.
Done printfile in remote control.
Done togglebookmark in remote control.
Done insertnl in remote control.
Done inserttext in remote control.
Added cut, copy and paste to remote control.
Fixed hang if no data to send.
Done send cursor position in remote control ( tabnumber:line:column ).
Done send selected text in remote control.
Added save current session to remote control.
Added send current session name to remote control.
Added session name to info passed to external tools.
Changed KKEditProjectPNG.png to KKEditQTProject.png.
Sorted function decs in docview.
Improved qt5 function lookup.
Suppressed some unneeed variable warnings.
Added icons to plugin menus.
Code clean.
Added icons to plugin menus.
Set find/replace drop downs to last item on startup.
Fixed saving too many items from replace.
Fixed running tool in terminal as root.
Fixed running tool in terminal.
Fixed inserting top from tool into document if tool is run as root.
Running tools as root and/or synchronously now works properly.
Sorted out enabling/disabling switches on tools setup dialog.
Code clean.
Moved tempory folder to /run from /tmp.
Updated external tools.

0.7.3
Progress bar now doesn't show until there is data to show.
Done more documentation.
Fixed async tools.
Added force show completion to shortcuts in prefs.
Fixed completion bug.
Added changing progress bar from pulse to progress and back via control file.
Added using progress bar to external tools.
Fixed bookmarks moving when adding/deleting line(s).
Minor UI tweaks.
Added Go language syntax highlighter.
Fixed edge case where kkeditqt opened in one folder then trying to open a file with releative path from another folder.
Fixed opening duplicate files with relative path.