@@ -1,4 +1,5 @@
 0.7.4
+Done savefileas in remote control.
 Added newfile to remote control.
 Done insertfile to in remote control.
 Done selectbetween to in remote control.
